Update Athena Function

--- a/FINAL-PROJECT-AAI-540.ipynb
+++ b/FINAL-PROJECT-AAI-540.ipynb
@@ -2886,7 +2886,81 @@
     "    else:\n",
     "        failure_reason = response['QueryExecution']['Status'].get('StateChangeReason', 'Unknown error')\n",
     "        print(f\"Query failed: {failure_reason}\")\n",
-    "        return None"
+    "        return None\n",
+    "\n",
+    "def run_athena_query_large(query, database=database_name):\n",
+    "    \"\"\"Execute Athena query and paginate through all results\"\"\"\n",
+    "    print(\"Executing large query...\")\n",
+    "    \n",
+    "    response = athena_client.start_query_execution(\n",
+    "        QueryString=query,\n",
+    "        QueryExecutionContext={'Database': database},\n",
+    "        ResultConfiguration=athena_config\n",
+    "    )\n",
+    "    \n",
+    "    query_execution_id = response['QueryExecutionId']\n",
+    "    print(f\"Query execution ID: {query_execution_id}\")\n",
+    "    \n",
+    "    # Wait for completion\n",
+    "    while True:\n",
+    "        response = athena_client.get_query_execution(QueryExecutionId=query_execution_id)\n",
+    "        status = response['QueryExecution']['Status']['State']\n",
+    "        if status in ['SUCCEEDED', 'FAILED', 'CANCELLED']:\n",
+    "            break\n",
+    "        print(\".\", end=\"\")\n",
+    "        time.sleep(2)\n",
+    "    \n",
+    "    if status != 'SUCCEEDED':\n",
+    "        failure_reason = response['QueryExecution']['Status'].get('StateChangeReason', 'Unknown error')\n",
+    "        print(f\"\\nQuery failed: {failure_reason}\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Paginate through all results\n",
+    "    all_rows = []\n",
+    "    columns = None\n",
+    "    next_token = None\n",
+    "    page = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        if next_token:\n",
+    "            results = athena_client.get_query_results(\n",
+    "                QueryExecutionId=query_execution_id,\n",
+    "                NextToken=next_token\n",
+    "            )\n",
+    "        else:\n",
+    "            results = athena_client.get_query_results(QueryExecutionId=query_execution_id)\n",
+    "        \n",
+    "        if columns is None:\n",
+    "            columns = [col['Label'] for col in results['ResultSet']['ResultSetMetadata']['ColumnInfo']]\n",
+    "            rows_to_process = results['ResultSet']['Rows'][1:]\n",
+    "        else:\n",
+    "            rows_to_process = results['ResultSet']['Rows']\n",
+    "        \n",
+    "        for row in rows_to_process:\n",
+    "            row_data = [field.get('VarCharValue', '') for field in row['Data']]\n",
+    "            all_rows.append(row_data)\n",
+    "        \n",
+    "        page += 1\n",
+    "        print(f\"\\nLoaded page {page}: {len(all_rows):,} rows so far...\")\n",
+    "        \n",
+    "        next_token = results.get('NextToken')\n",
+    "        if not next_token:\n",
+    "            break\n",
+    "    \n",
+    "    df = pd.DataFrame(all_rows, columns=columns)\n",
+    "    \n",
+    "    # Convert numeric columns\n",
+    "    numeric_columns = ['acousticness', 'danceability', 'energy', 'instrumentalness',\n",
+    "                       'liveness', 'loudness', 'popularity', 'speechiness', 'tempo',\n",
+    "                       'valence', 'mainstream_score', 'novelty_score', 'musical_complexity',\n",
+    "                       'genre_popularity'] + [col for col in df.columns if col.startswith(('key_', 'time_signature_', 'mood_', 'complexity_'))]\n",
+    "    \n",
+    "    for col in numeric_columns:\n",
+    "        if col in df.columns:\n",
+    "            df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+    "    \n",
+    "    print(f\"✓ Query completed. Loaded {len(df):,} total rows.\")\n",
+    "    return df"
    ]
   },
   {
@@ -3349,7 +3423,7 @@
     "role = get_execution_role()\n",
     "sagemaker_client = boto3.client('sagemaker', region_name=region)\n",
     "\n",
-    "# Create Model Package Group (container for all model versions)\n",
+    "# Create Model Package Group (container for all the model versions)\n",
     "model_package_group_name = \"music-recommendation-models\"\n",
     "model_package_group_description = \"Music track recommendation models - cosine similarity, KMeans, and other ML approaches\"\n",
     "\n",
