Code for continuous monitoring and CloudWatch metrics

--- a/FINAL-PROJECT-AAI-540.ipynb
+++ b/FINAL-PROJECT-AAI-540.ipynb
@@ -6623,18 +6623,415 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Setup Continuous Monitoring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate synthetic traffic"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from threading import Thread\n",
+    "from time import sleep\n",
+    "import os\n",
+    "\n",
+    "def _extract_similarity(top1):\n",
+    "    if isinstance(top1, dict):\n",
+    "        for k in (\"similarity\", \"score\", \"probability\"):\n",
+    "            v = top1.get(k)\n",
+    "            if v is not None:\n",
+    "                return float(v)\n",
+    "    if isinstance(top1, (list, tuple)) and len(top1) >= 2:\n",
+    "        return float(top1[1])\n",
+    "    return float(top1)\n",
+    "\n",
+    "def _iter_features(df):\n",
+    "    for row in df.itertuples(index=False):\n",
+    "        yield list(row)\n",
+    "\n",
+    "def invoke_endpoint(predictor, X_source, *, baseline_csv_path=None,\n",
+    "                    similarity_cutoff=0.80, rate_limit_s=1.0):\n",
+    "    writer = None\n",
+    "    if baseline_csv_path:\n",
+    "        os.makedirs(os.path.dirname(baseline_csv_path) or \".\", exist_ok=True)\n",
+    "        new_file = not os.path.exists(baseline_csv_path)\n",
+    "        writer = open(baseline_csv_path, \"a\", buffering=1)\n",
+    "        if new_file:\n",
+    "            writer.write(\"probability,prediction,label\\n\")\n",
+    "\n",
+    "    i = 0\n",
+    "    try:\n",
+    "        for features in _iter_features(X_source):\n",
+    "            payload = {\"features\": features}\n",
+    "            try:\n",
+    "                resp = predictor.predict(payload, inference_id=str(i))\n",
+    "                recs = resp[\"recommendations\"] if isinstance(resp, dict) and \"recommendations\" in resp else resp\n",
+    "                if not recs:\n",
+    "                    i += 1\n",
+    "                    sleep(rate_limit_s)\n",
+    "                    continue\n",
+    "\n",
+    "                top1 = recs[0] if isinstance(recs, (list, tuple)) else recs\n",
+    "                sim = _extract_similarity(top1)\n",
+    "                pred = 1 if sim >= similarity_cutoff else 0\n",
+    "                label = pred  # mirror your example\n",
+    "\n",
+    "                if writer:\n",
+    "                    writer.write(f\"{sim:.6f},{pred},{label}\\n\")\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"warn: {i} -> {repr(e)}\")\n",
+    "\n",
+    "            i += 1\n",
+    "            sleep(rate_limit_s)\n",
+    "    finally:\n",
+    "        if writer:\n",
+    "            writer.close()\n",
+    "\n",
+    "def invoke_endpoint_forever():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            invoke_endpoint(\n",
+    "                predictor=predictor,\n",
+    "                X_source=X_val.iloc[:300],\n",
+    "                baseline_csv_path=baseline_local_path,\n",
+    "                similarity_cutoff=similarity_cutoff,\n",
+    "                rate_limit_s=1.0,\n",
+    "            )\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "\n",
+    "thread = Thread(target=invoke_endpoint_forever, daemon=True)\n",
+    "thread.start()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.s3 import S3Downloader, S3Uploader\n",
+    "data_capture_prefix = f\"{prefix}/datacapture\"\n",
+    "s3_capture_upload_path = f\"s3://{bucket}/{data_capture_prefix}\"\n",
+    "print(\"Waiting for captures to show up\", end=\"\")\n",
+    "for _ in range(120):\n",
+    "    capture_files = sorted(S3Downloader.list(f\"{data_capture_path}/{endpoint_name}\"))\n",
+    "    if capture_files:\n",
+    "        capture_file = S3Downloader.read_file(capture_files[-1]).split(\"\\n\")\n",
+    "        capture_record = json.loads(capture_file[0])\n",
+    "        if \"inferenceId\" in capture_record[\"eventMetadata\"]:\n",
+    "            break\n",
+    "    print(\".\", end=\"\", flush=True)\n",
+    "    sleep(1)\n",
+    "print()\n",
+    "print(\"Found Capture Files:\")\n",
+    "print(\"\\n \".join(capture_files[-3:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\".join(capture_file[-3:-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(json.dumps(capture_record, indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate synthetic ground truth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ground_truth_upload_path = (\n",
+    "    f\"s3://{bucket}/{prefix}/ground_truth_data/{datetime.now():%Y-%m-%d-%H-%M-%S}\"\n",
+    ")\n",
+    "\n",
+    "def ground_truth_with_id(event_id):\n",
+    "    random.seed(str(event_id))\n",
+    "    label = \"1\" if random.random() < 0.7 else \"0\"\n",
+    "\n",
+    "    return {\n",
+    "        \"groundTruthData\": {\n",
+    "            \"data\": json.dumps({\"label\": label}),\n",
+    "            \"encoding\": \"CSV\",\n",
+    "        },\n",
+    "        \"eventMetadata\": {\n",
+    "            \"eventId\": str(event_id),\n",
+    "        },\n",
+    "        \"eventVersion\": \"0\",\n",
+    "    }\n",
+    "\n",
+    "def upload_ground_truth(records, upload_time=None):\n",
+    "    if upload_time is None:\n",
+    "        upload_time = datetime.utcnow()\n",
+    "\n",
+    "    lines = [json.dumps(r) for r in records]\n",
+    "    body = \"\\n\".join(lines)\n",
+    "    target_s3_uri = f\"{ground_truth_upload_path}/{upload_time:%Y/%m/%d/%H/%M%S}.json\"\n",
+    "    print(f\"Uploading {len(lines)} records to\", target_s3_uri)\n",
+    "    S3Uploader.upload_string_as_file_body(body, target_s3_uri)\n",
+    "\n",
+    "def ground_truth_from_capture_event(capture_event):\n",
+    "    event_id = capture_event[\"eventMetadata\"][\"eventId\"]\n",
+    "    return ground_truth_with_id(event_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NUM_GROUND_TRUTH_RECORDS = 334  # 334 are the number of rows in data we're sending for inference\n",
+    "import random\n",
+    "\n",
+    "def generate_fake_ground_truth_forever():\n",
+    "    j = 0\n",
+    "    while True:\n",
+    "        fake_records = [ground_truth_with_id(i) for i in range(NUM_GROUND_TRUTH_RECORDS)]\n",
+    "        upload_ground_truth(fake_records, datetime.utcnow())\n",
+    "        j = (j + 1) % 5\n",
+    "        sleep(60 * 60)  # do this once an hour\n",
+    "\n",
+    "\n",
+    "gt_thread = Thread(target=generate_fake_ground_truth_forever)\n",
+    "gt_thread.start()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create monitoring schedule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recommendation_monitor_schedule_name = (\n",
+    "    f\"music-recommender-monitoring-schedule-{datetime.utcnow():%Y-%m-%d-%H%M}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.model_monitor import EndpointInput\n",
+    "endpointInput = EndpointInput(\n",
+    "    endpoint_name=predictor.endpoint_name,\n",
+    "    probability_attribute=\"0\",\n",
+    "    probability_threshold_attribute=0.5,\n",
+    "    destination=\"/opt/ml/processing/input_data\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.model_monitor import CronExpressionGenerator\n",
+    "\n",
+    "response = model_quality_monitor.create_monitoring_schedule(\n",
+    "    monitor_schedule_name=recommendation_monitor_schedule_name,\n",
+    "    endpoint_input=endpointInput,\n",
+    "    output_s3_uri=baseline_results_uri,\n",
+    "    problem_type=\"BinaryClassification\",\n",
+    "    ground_truth_input=ground_truth_upload_path,\n",
+    "    constraints=baseline_job.suggested_constraints(),\n",
+    "    schedule_cron_expression=CronExpressionGenerator.hourly(),\n",
+    "    enable_cloudwatch_metrics=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_quality_monitor.describe_schedule()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executions = model_quality_monitor.list_executions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Waiting for first execution\", end=\"\")\n",
+    "while True:\n",
+    "    execution = model_quality_monitor.describe_schedule().get(\n",
+    "        \"LastMonitoringExecutionSummary\"\n",
+    "    )\n",
+    "    if execution:\n",
+    "        break\n",
+    "    print(\".\", end=\"\", flush=True)\n",
+    "    sleep(10)\n",
+    "print()\n",
+    "print(\"Execution found!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while not executions:\n",
+    "    executions = model_quality_monitor.list_executions()\n",
+    "    print(\".\", end=\"\", flush=True)\n",
+    "    sleep(10)\n",
+    "latest_execution = executions[-1]\n",
+    "latest_execution.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "status = execution[\"MonitoringExecutionStatus\"]\n",
+    "\n",
+    "while status in [\"Pending\", \"InProgress\"]:\n",
+    "    print(\"Waiting for execution to finish\", end=\"\")\n",
+    "    latest_execution.wait(logs=False)\n",
+    "    latest_job = latest_execution.describe()\n",
+    "    print()\n",
+    "    print(f\"{latest_job['ProcessingJobName']} job status:\", latest_job[\"ProcessingJobStatus\"])\n",
+    "    print(\n",
+    "        f\"{latest_job['ProcessingJobName']} job exit message, if any:\",\n",
+    "        latest_job.get(\"ExitMessage\"),\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"{latest_job['ProcessingJobName']} job failure reason, if any:\",\n",
+    "        latest_job.get(\"FailureReason\"),\n",
+    "    )\n",
+    "    sleep(\n",
+    "        30\n",
+    "    )  # model quality executions consist of two Processing jobs, wait for second job to start\n",
+    "    latest_execution = model_quality_monitor.list_executions()[-1]\n",
+    "    execution = model_quality_monitor.describe_schedule()[\"LastMonitoringExecutionSummary\"]\n",
+    "    status = execution[\"MonitoringExecutionStatus\"]\n",
+    "\n",
+    "print(\"Execution status is:\", status)\n",
+    "\n",
+    "if status != \"Completed\":\n",
+    "    print(execution)\n",
+    "    print(\n",
+    "        \"====STOP==== \\n No completed executions to inspect further. Please wait till an execution completes or investigate previously reported failures.\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_execution = model_quality_monitor.list_executions()[-1]\n",
+    "report_uri = latest_execution.describe()[\"ProcessingOutputConfig\"][\"Outputs\"][0][\"S3Output\"][\n",
+    "    \"S3Uri\"\n",
+    "]\n",
+    "print(\"Report Uri:\", report_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.options.display.max_colwidth = None\n",
+    "violations = latest_execution.constraint_violations().body_dict[\"violations\"]\n",
+    "violations_df = pd.json_normalize(violations)\n",
+    "violations_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CloudWatch Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create CloudWatch client\n",
+    "cw_client = boto3.Session().client(\"cloudwatch\")\n",
+    "\n",
+    "namespace = \"aws/sagemaker/Endpoints/model-metrics\"\n",
+    "\n",
+    "cw_dimensions = [\n",
+    "    {\"Name\": \"Endpoint\", \"Value\": endpoint_name},\n",
+    "    {\"Name\": \"MonitoringSchedule\", \"Value\": recommendation_monitor_schedule_name},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List metrics through the pagination interface\n",
+    "paginator = cw_client.get_paginator(\"list_metrics\")\n",
+    "\n",
+    "for response in paginator.paginate(Dimensions=cw_dimensions, Namespace=namespace):\n",
+    "    model_quality_metrics = response[\"Metrics\"]\n",
+    "    for metric in model_quality_metrics:\n",
+    "        print(metric[\"MetricName\"])"
+   ]
   }
  ],
  "metadata": {
